lib_LTLIBRARIES = libmod_socket.la libmod_transceiver.la

libmod_socket_la_SOURCES = pg_cop_mod_socket.c
libmod_socket_la_LIBADD = ../libPGCOP/libPGCOP.la
libmod_socket_la_CFLAGS = -I ../libPGCOP

libmod_transceiver_la_SOURCES = pg_cop_mod_transceiver.c
libmod_transceiver_la_LIBADD = ../libPGCOP/libPGCOP.la
libmod_transceiver_la_CFLAGS = -I ../libPGCOP
